tests/regression/error/hw4_error03.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_BINARY {lft=EXP_NONE,opr=BOP_TIMES,rht=EXP_NUM 2}}]}
  : program
;
